# open-soundboard

./: .gitignore  README.md  index.html  package.json  renovate.json  vite.config.ts
.github/workflows/: release.yml  test.yml
src/: App.css  App.tsx  lib.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  cmd.rs  lib.rs  main.rs
src-tauri/src/audio/: decode.rs  device.rs  helpers.rs  mic.rs  mod.rs  normalize.rs  output.rs
src-tauri/src/audio/forwarding/: mod.rs  windows.rs
src-tauri/src/config/: customcss.rs  hotkey.rs  mod.rs  tab.rs
src/components/: playerBar.tsx  soundsList.tsx
src/components/layout/: hotkeyOverlay.tsx  onboardingScreen.tsx
src/components/layout/tabs/: dashboard.tsx  forwarding.tsx  settings.tsx
src/components/sounds/: soundItem.tsx  soundsList.tsx
src/components/tabs/: dashboard.tsx  settings.tsx
src/components/ui/: alert.tsx  progressSlider.tsx  updateNotification.tsx
src/components/ui/hotkeys/: hotkeyItem.tsx
src/components/ui/icons/: dashboardIcon.tsx
src/components/ui/settings/: settingSlider.tsx  settingToggle.tsx  sidebarTab.tsx
src/components/ui/sounds/: soundItem.tsx  soundsList.tsx
src/components/ui/tab/: tabGroup.tsx
src/lib/: alert.ts  alerts.ts  config.ts  constants.ts  forwarding.ts  helpers.ts  hotkey.ts  index.ts  notifications.ts  sound.ts  tab.ts  types.ts  updater.ts  utils.ts
src/tabs/: dashboard.tsx  settings.tsx
