[package]
name = "open-soundboard"
version = "0.1.0"
description = "Soundboard written in Rust"
authors = ["tensake"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_soundboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.18"
rodio = "0.22.2"
rubato = "3.0"
ringbuf = "0.4"
symphonia = { version = "0.5", features = ["mp3"] }
audioadapter-buffers = "3.0"
parking_lot = "0.12.5"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.18", features = ["pipewire"] }
