[package]
name = "open-soundboard"
version = "0.1.0"
description = "A fast, cross-platform and lightweight soundboard built with Rust and Tauri"
authors = ["tensake"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_soundboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 0
incremental = true
debug = 0
[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.18"
rodio = "0.22.2"
rubato = "3.0"
ringbuf = "0.4"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "vorbis", "ogg", "isomp4", "aac", "pcm"] }
audioadapter-buffers = "3.0"
parking_lot = "0.12.5"
tauri-plugin-dialog = "2"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
pitch_shift = "2.1.0"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
log = "0.4"
ebur128 = "0.1.10"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.18", features = ["pipewire"] }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23.0"
windows-icons = "0.3.0"
sysinfo = "0.38"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-cli = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
